Change cart styles

--- a/app/design/frontend/custom/default/template/catalog/product/view.phtml
+++ b/app/design/frontend/custom/default/template/catalog/product/view.phtml
@@ -44,6 +44,11 @@ if ($_product->isGrouped()) {
 <div id="messages_product_view"><?php echo $this->getMessagesBlock()->getGroupedHtml() ?></div>
 <div class="product-view container" itemscope itemtype="http://schema.org/Product">
     <div class="product-essential">
+        <form action="<?php echo $this->getSubmitUrlCustom($_product, array('_secure' => $this->_isSecure()), false) ?>"
+              method="post"
+              id="product_addtocart_form"
+            <?php if ($_product->getOptions()): ?> enctype="multipart/form-data" <?php endif; ?>>
+            <?php echo $this->getBlockHtml('formkey') ?>
     <div>
         <?php echo $this->getBlockHtml('formkey') ?>
         <div class="product-media">
@@ -66,9 +71,61 @@ if ($_product->isGrouped()) {
                     <div class="std" itemprop="description"><?php echo $_helper->productAttribute($_product, nl2br($_product->getShortDescription()), 'short_description') ?></div>
                 </div>
             <?php endif;?>
+            <?php echo $this->getChildHtml('addtocart') ?>
             <?php echo $this->getChildHtml('product_type_data') ?>
             <div class="clear"></div>
         </div>
+        <script type="text/javascript">
+            //<![CDATA[
+            var productAddToCartForm = new VarienForm('product_addtocart_form');
+            productAddToCartForm.submit = function(button, url) {
+                if (this.validator.validate()) {
+                    var form = this.form;
+                    var oldUrl = form.action;
+
+                    if (url) {
+                        form.action = url;
+                    }
+                    var e = null;
+                    try {
+                        this.form.submit();
+                    } catch (e) {
+                    }
+                    this.form.action = oldUrl;
+                    if (e) {
+                        throw e;
+                    }
+
+                    if (button && button != 'undefined') {
+                        button.disabled = true;
+                    }
+                }
+            }.bind(productAddToCartForm);
+
+            productAddToCartForm.submitLight = function(button, url){
+                if(this.validator) {
+                    var nv = Validation.methods;
+                    delete Validation.methods['required-entry'];
+                    delete Validation.methods['validate-one-required'];
+                    delete Validation.methods['validate-one-required-by-name'];
+                    // Remove custom datetime validators
+                    for (var methodName in Validation.methods) {
+                        if (methodName.match(/^validate-datetime-.*/i)) {
+                            delete Validation.methods[methodName];
+                        }
+                    }
+
+                    if (this.validator.validate()) {
+                        if (url) {
+                            this.form.action = url;
+                        }
+                        this.form.submit();
+                    }
+                    Object.extend(Validation.methods, nv);
+                }
+            }.bind(productAddToCartForm);
+            //]]>
+        </script>
     </form>
 
     </div>
