--- a/skin/frontend/custom/default/css/styles.css
+++ b/skin/frontend/custom/default/css/styles.css
@@ -523,8 +523,10 @@ div.alert button:hover{ cursor:pointer; background-position:0 -9px;}
 
 /* Page Heading */
 .page-title,
-.category-title { margin:0 0 40px; border-bottom: 7px solid #d4d4d4; padding-bottom: 10px;}
+.category-title {text-align:center;}
 .category-title {display:block; }
+
+.page-title .caption {float:none;}
 
 .page-title h1,
 .page-title h2 {
@@ -2263,7 +2265,7 @@ img.lazy{
 .cart .crosssell {}
 .cart .crosssell .product-name a { text-decoration:none; font-size:12px; line-height:18px;}
 .cart .col2-set h2 {
-	border-bottom:2px solid #3A3A3A;
+	border-bottom:2px solid #00AFB0;
 	font-size:17px;
 	line-height:24px;
 	color:#3a3a3a;
@@ -2315,17 +2317,17 @@ img.lazy{
 .cart .shipping .buttons-set{ margin-top:0; padding-top:15px; padding-bottom:10px;}
 
 /* Shopping Cart Totals */
-.cart .totals { background:#3a3a3a;	overflow:hidden;padding:0px 0px 0px 0px; width: 34%; float: right;}
+.cart .totals {	overflow:hidden;padding:0px 0px 0px 0px; width: 34%; float: right; border-radius: 5px; border:1px dashed #303c4b;}
 .cart .totals table { width:100%; font-size:12px; color:#7f7f7f; margin-bottom:0px; }
 .cart .totals table tr{ border-bottom:1px solid #606060;}
 .cart .totals table th,
-.cart .totals table td { padding:7px 11px; font-size:13px; line-height:17px; color:#fff; text-transform:uppercase; vertical-align:middle; width:50%;  }
+.cart .totals table td { padding:7px 11px; font-size:13px; line-height:17px; color:#303c4b; text-transform:uppercase; vertical-align:middle; width:50%;  }
 .cart .totals table tr td:first-child { }
 .cart .totals table td:first-child.a-right {text-align: left !important;}
 .cart .totals table strong { font-weight:normal; }
 .cart .totals table th { font-weight:bold; }
 .cart .totals table tfoot th {}
-.cart .totals .price {font-size:18px; line-height:normal; color:#fff; display:inline-block; padding: 0;}
+.cart .totals .price {font-size:18px; line-height:normal; color:#303c4b; display:inline-block; padding: 0;}
 .cart .totals button.button > span {}
 .cart .totals button.button:hover > span{ }
 .checkout-types li {padding-top:15px;}
