--- a/app/design/frontend/custom/default/template/checkout/cart.phtml
+++ b/app/design/frontend/custom/default/template/checkout/cart.phtml
@@ -97,10 +97,10 @@
                         <tr>
                             <td colspan="50" class="a-right">
                                 <?php if ($this->helper('krasnov_catalog')->getCatalogUrl()): ?>
-                                    <button type="button" class="btn-invert btn-invert_big" title="<?php echo Mage::helper('core')->quoteEscape($this->__('Continue Shopping')) ?>" class="button btn-continue" onclick="setLocation('<?php echo Mage::helper('core')->quoteEscape($this->helper('krasnov_catalog')->getCatalogUrl()) ?>')"><span><span><?php echo $this->__('Continue Shopping') ?></span></span></button>
+                                    <button type="button" title="<?php echo Mage::helper('core')->quoteEscape($this->__('Continue Shopping')) ?>" class="button btn-continue" onclick="setLocation('<?php echo Mage::helper('core')->quoteEscape($this->helper('krasnov_catalog')->getCatalogUrl()) ?>')"><span><span><?php echo $this->__('Continue Shopping') ?></span></span></button>
                                 <?php endif; ?>
-                                <button type="submit" class="btn-invert btn-invert_big" name="update_cart_action"  value="update_qty" title="<?php echo Mage::helper('core')->quoteEscape($this->__('Update Shopping Cart')); ?>" class="button btn-update"><span><span><?php echo $this->__('Update Shopping Cart'); ?></span></span></button>
-                                <button type="submit" class="btn-invert btn-invert_big" name="update_cart_action" value="empty_cart" title="<?php echo Mage::helper('core')->quoteEscape($this->__('Clear Shopping Cart')); ?>" class="button btn-empty" id="empty_cart_button"><span><span><?php echo $this->__('Clear Shopping Cart'); ?></span></span></button>
+                                <button type="submit"  name="update_cart_action"  value="update_qty" title="<?php echo Mage::helper('core')->quoteEscape($this->__('Update Shopping Cart')); ?>" class="button btn-update"><span><span><?php echo $this->__('Update Shopping Cart'); ?></span></span></button>
+                                <button type="submit"  name="update_cart_action" value="empty_cart" title="<?php echo Mage::helper('core')->quoteEscape($this->__('Clear Shopping Cart')); ?>" class="button btn-empty" id="empty_cart_button"><span><span><?php echo $this->__('Clear Shopping Cart'); ?></span></span></button>
                                 <!--[if lt IE 8]>
                                 <input type="hidden" id="update_cart_action_container" />
                                 <script type="text/javascript">
