--- a/app/design/frontend/custom/default/template/persistent/checkout/onepage/billing.phtml
+++ b/app/design/frontend/custom/default/template/persistent/checkout/onepage/billing.phtml
@@ -40,22 +40,27 @@
         <fieldset>
             <input type="hidden" name="billing[address_id]" value="<?php echo $this->getAddress()->getId() ?>" id="billing:address_id" />
             <ul>
-                <li class="fields"><?php echo $this->getLayout()->createBlock('customer/widget_name')->setObject($this->getAddress()->getFirstname() ? $this->getAddress() : $this->getQuote()->getCustomer())->setForceUseCustomerRequiredAttributes(!$this->isCustomerLoggedIn())->setFieldIdFormat('billing:%s')->setFieldNameFormat('billing[%s]')->toHtml() ?></li>
                 <li class="fields">
                     <div class="field">
-                        <label for="billing:company"><?php echo $this->__('Company') ?></label>
+                        <label for="billing:firstname"><?php echo $this->__('Firstname') ?></label>
                         <div class="input-box">
-                            <input type="text" id="billing:company" name="billing[company]" value="<?php echo $this->escapeHtml($this->getAddress()->getCompany()) ?>" title="<?php echo $this->__('Company') ?>" class="input-text <?php echo $this->helper('customer/address')->getAttributeValidationClass('company') ?>" />
+                            <input type="text" id="billing:firstname" name="billing[firstname]" value="<?php echo $this->escapeHtml($this->getAddress()->getFirstname()) ?>" title="<?php echo $this->__('Firstname') ?>" class="input-text <?php echo $this->helper('customer/address')->getAttributeValidationClass('firstname') ?>" />
                         </div>
                     </div>
-        <?php if(!$this->isCustomerLoggedIn()): ?>
+                    <div class="field">
+                        <label for="billing:lastname"><?php echo $this->__('Lastname') ?></label>
+                        <div class="input-box">
+                            <input type="text" id="billing:lastname" name="billing[lastname]" value="<?php echo $this->escapeHtml($this->getAddress()->getLastname()) ?>" title="<?php echo $this->__('Lastname') ?>" class="input-text <?php echo $this->helper('customer/address')->getAttributeValidationClass('lastname') ?>" />
+                        </div>
+                    </div>
+                </li>
+                <li class="fields">
                     <div class="field">
                         <label for="billing:email" class="required"><em>*</em><?php echo $this->__('Email Address') ?></label>
                         <div class="input-box">
                             <input type="email" name="billing[email]" id="billing:email" value="<?php echo $this->escapeHtml($this->getAddress()->getEmail()) ?>" title="<?php echo $this->__('Email Address') ?>" class="input-text validate-email required-entry" />
                         </div>
                     </div>
-        <?php endif; ?>
                 </li>
         <?php $_streetValidationClass = $this->helper('customer/address')->getAttributeValidationClass('street'); ?>
                 <li class="wide">
@@ -123,12 +128,6 @@
                             <input type="number" name="billing[telephone]" value="<?php echo $this->escapeHtml($this->getAddress()->getTelephone()) ?>" title="<?php echo $this->__('Telephone') ?>" class="input-text <?php echo $this->helper('customer/address')->getAttributeValidationClass('telephone') ?>" id="billing:telephone" />
                         </div>
                     </div>
-                    <div class="field">
-                        <label for="billing:fax"><?php echo $this->__('Fax') ?></label>
-                        <div class="input-box">
-                            <input type="number" name="billing[fax]" value="<?php echo $this->escapeHtml($this->getAddress()->getFax()) ?>" title="<?php echo $this->__('Fax') ?>" class="input-text <?php echo $this->helper('customer/address')->getAttributeValidationClass('fax') ?>" id="billing:fax" />
-                        </div>
-                    </div>
                 </li>
                 <?php if(!$this->isCustomerLoggedIn()): ?>
 
@@ -181,17 +180,9 @@
             <?php echo $this->getChildHtml('persistent.remember.me.tooltip'); ?>
         </fieldset>
      </li>
-    <?php if ($this->canShip()): ?>
-        <li class="control">
-            <input type="radio" name="billing[use_for_shipping]" id="billing:use_for_shipping_yes" value="1"<?php if ($this->isUseBillingAddressForShipping()) {?> checked="checked"<?php }?> title="<?php echo  $this->__('Ship to this address') ?>" onclick="$('shipping:same_as_billing').checked = true;" class="radio" /><label for="billing:use_for_shipping_yes"><?php echo  $this->__('Ship to this address') ?></label></li>
-        <li class="control">
-            <input type="radio" name="billing[use_for_shipping]" id="billing:use_for_shipping_no" value="0"<?php if (!$this->isUseBillingAddressForShipping()) {?> checked="checked"<?php }?> title="<?php echo $this->__('Ship to different address') ?>" onclick="$('shipping:same_as_billing').checked = false;" class="radio" /><label for="billing:use_for_shipping_no"><?php echo $this->__('Ship to different address') ?></label>
-        </li>
-    <?php endif; ?>
+
     </ul>
-    <?php if (!$this->canShip()): ?>
-        <input type="hidden" name="billing[use_for_shipping]" value="1" />
-    <?php endif; ?>
+    <input type="hidden" name="billing[use_for_shipping]" value="1" />
     <div class="buttons-set" id="billing-buttons-container">
         <p class="required"><?php echo $this->__('* Required Fields') ?></p>
         <button type="button" title="<?php echo $this->__('Continue') ?>" class="button" onclick="billing.save()"><span><span><?php echo $this->__('Continue') ?></span></span></button>
