Edit success page

--- a/skin/frontend/custom/default/css/custom.css
+++ b/skin/frontend/custom/default/css/custom.css
@@ -2254,3 +2254,13 @@ body {
 #checkoutSteps {
     margin-bottom:40px;
 }
+
+.successParagraph {
+    font-size: 16pt;
+    margin-top: 15px;
+}
+
+.successThankCaption {
+    text-align: left;
+    font-size: 18pt;
+}
