Styles edit, logo edit

--- a/app/design/frontend/custom/default/template/page/html/header.phtml
+++ b/app/design/frontend/custom/default/template/page/html/header.phtml
@@ -7,7 +7,7 @@
 					</span>
     </div>
     <a class="header__logo" href="/">
-        <img src="/media/logoNew.png">
+        <img src="/media/logoRotang.png">
     </a>
     <div class="communicationPhone">
         <div>
