Change footer,header data

--- a/app/design/frontend/custom/default/template/page/html/footer.phtml
+++ b/app/design/frontend/custom/default/template/page/html/footer.phtml
@@ -17,18 +17,18 @@
                 <div class="col-md-6 col-sm-12" id="footer-contacts">
                     <h2 class="white">Контакты:</h2>
                     <ul class="lists">
-                        <li class="arrow_red"><a href="/">Телефон: 8-988-551-55-11 </a></li>
-                        <li class="arrow_red"><a href="/">Офис: район, с.В-Вознесенка, ул. Советская, д.39. </a></li>
-                        <li class="arrow_red"><a href="/">platov-mebel@mail.ru</a></li>
+                        <li class="arrow_red"><a href="/">Телефон: 8-988-555-55-55 </a></li>
+                        <li class="arrow_red"><a href="/">Офис: район, с.В-Вознесенка, ул. Советская, д.50. </a></li>
+                        <li class="arrow_red"><a href="/">rotang-mebel@mail.ru</a></li>
                     </ul>
                     <h2 class="white">Наши реквизиты:</h2>
                     <div>
-                        <p class="nameBill">ИНН 612308227280</p>
-                        <p class="nameBill">ОГРНИП 318619600095260</p>
-                        <p class="nameBill">БИК 046015602</p>
-                        <p class="nameBill">ОКПО 97788686</p>
-                        <p class="nameBill">Корр. счет 30101810600000000602</p>
-                        <p class="nameBill">Расч. счет 40802810552090034418</p>
+                        <p class="nameBill">ИНН 612308220000</p>
+                        <p class="nameBill">ОГРНИП 318619600090000</p>
+                        <p class="nameBill">БИК 046010000</p>
+                        <p class="nameBill">ОКПО 97780000</p>
+                        <p class="nameBill">Корр. счет 30101810600000000000</p>
+                        <p class="nameBill">Расч. счет 40802810552090030000</p>
                     </div>
                 </div>
             </div>
@@ -38,7 +38,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 hidden-sm">
-                    © 2020 created by <a href="http://ionerednew.ru/">ionerednew</a>
+                    © 2021 created by ionerednew</a>
                 </div>
                 <div class="col-md-6">
                     <div class="footer_menu"><a href="/">Главная</a> <a href="<?=$this->helper('krasnov_catalog')->getCatalogUrl() ?>">Каталог</a> <a href="<?=$this->getUrl('shares')?>">Акции</a> <a href="<?=$this->getUrl();?>#about-us-main" class="linkToId"">О нас</a></div>
