--- a/app/design/frontend/custom/default/template/page/html/header.phtml
+++ b/app/design/frontend/custom/default/template/page/html/header.phtml
@@ -12,7 +12,7 @@
     <div class="communicationPhone">
         <div>
             <p>Телефон для связи</p>
-            <p>+7 (988) 551-55-11</p>
+            <p>+7 (988) 555-55-55</p>
         </div>
     </div>
 </div>
@@ -23,6 +23,7 @@
     <a href="/gallery">Галерея</a>
     <a href="<?=$this->helper('krasnov_catalog')->getCatalogUrl()?>">Каталог</a>
     <a href="/shares">Акции</a>
+    <a href="/checkout/cart">Корзина</a>
     <a href="#footer-contacts" class="linkToId">Контакты</a>
     <div class="search"><?php echo $this->getChildHtml('topSearch') ?></div>
 </div>
